Make slight Color changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <div class="main-nav container flex">
             <a href="#" class="company-logo" onclick='reload()'>
-                <img src="assets/logo.png" alt="comapanylogo">
+                <img src="assets/logo.png" alt="comapanylogo" id="news-logo">
             </a>
             <div class="nav-links">
                 <ul class="flex">
